feat(source): add endpoint for getting all users
